[package]
name = "tigerbeetle-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = { version = "0.4.3", features = ["server"] }
enfipy-tigerbeetle = "0.16.67"
futures = "0.3"
